@@ -48,6 +48,17 @@
 }
 @end
 
+@interface NSView (NibLoaderPrivate)
+- (void) setSuperview: (NSView *)view;
+@end
+
+@implementation NSView (NibLoaderPrivate)
+- (void) setSuperview: (NSView *)view
+{
+  ASSIGN(_super_view, view);
+}
+@end
+
 @interface GormNibWrapperLoader : GormWrapperLoader
 {
   NSIBObjectData *container;
@@ -306,6 +317,12 @@
 		      [o setLabel: (id)newTag];
 		    }
 		}
+
+	      // skip any help connectors...
+	      if([o isKindOfClass: [NSIBHelpConnector class]])
+		{
+		  continue;
+		}
 	      [document addConnector: o];
 	    }
 
@@ -366,6 +383,12 @@
       // blank the target/action for all objects.
       [obj setTarget: nil];
       [obj setAction: NULL];
+    }
+
+  // okay, this might be a kludge...
+  if([obj isKindOfClass: [NSView class]])
+    {
+      [obj setSuperview: nil];
     }
 
   return obj;
